--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">HouseRentProject</string>
+    <string name="app_name"></string>
+
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+
+    <string name="menu_filter">Filter</string>
+    <string name="menu_logout">Logout</string>
+
 </resources>
