Added Location spinner successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,16 @@
     <string name="menu_filter">Filter</string>
     <string name="menu_logout">Logout</string>
 
+    <string-array name="location_spinner">
+
+        <item>Maijdee Bazar</item>
+        <item>Housing</item>
+        <item>Powro Bazar</item>
+        <item>Bissonath</item>
+        <item>Sonapur</item>
+        <item>Varsity Area</item>
+        <item>Dotto Bari</item>
+
+    </string-array>
+
 </resources>
